# DemoStep1

app/: build.gradle
app/src/androidTest/java/sdkapp/video/lightsky/com/demostep1/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AListener.cpp  AListener.h  CMakeLists.txt  CSignal.cpp  CSignal.h  Trap2FindProblem.cpp  Trap2FindProblem.h  YCAudioEncoderOpus.cpp  YCAudioEncoderOpus.h  YCAudioPreprocess.cpp  YCAudioPreprocess.h  YCPlayer.cpp  YCPlayer.h  YCRecorder.cpp  YCRecorder.h  native-lib.cpp
app/src/main/cpp/jni/: Android.mk  Application.mk  Application.mk的副本  CSignal.cpp  CSignal.h  HighPassFilter.cpp  HighPassFilter.h  IAcousticEchoCanceler.h  NativeOpusCodec.cpp  NativeOpusCodec.h  NativeSpeexCodec.cpp  NativeSpeexCodec.h  NativeVoiceCodec.cpp  NativeVoiceCodec.h  NativeWebRtcAEC.cpp  NativeWebRtcAEC.h  NativeWebRtcAECM.cpp  NativeWebRtcAECM.h  NativeWebRtcFilter.cpp  NativeWebRtcFilter.h  YeeCallRecorder.cpp  YeeCallRecorder.h  ZayhuVoIP.cpp  build-howling.mk  build-noisedetect.mk  build-opus-1.1.3.mk  build-rnnoise.mk  build-speex.mk  build-webrtc-v57.mk  com_zayhu_library_jni_Echo.cpp  com_zayhu_library_jni_Echo.h  com_zayhu_library_jni_OpenSLRecorder.cpp  com_zayhu_library_jni_OpenSLRecorder.h  com_zayhu_library_jni_Opus.cpp  com_zayhu_library_jni_Opus.h  com_zayhu_library_jni_Speex.cpp  com_zayhu_library_jni_Speex.h  com_zayhu_library_jni_StatisticUtils.cpp  com_zayhu_library_jni_StatisticUtils.h  com_zayhu_library_jni_VoiceCodec.cpp  (+12 more)
app/src/main/cpp/jni/YCInterface/: IYCWebRtcAEC.cpp  IYCWebRtcAEC.h  IYCWebRtcAECM.cpp  IYCWebRtcAECM.h  IYCWebRtcAgc.cpp  IYCWebRtcAgc.h  IYCWebRtcNSx.cpp  IYCWebRtcNSx.h
app/src/main/cpp/jni/howling/: OouraFFT.c  OouraFFT.h  feedbackDetect.c  feedbackDetect.h  fft4g.c  fft4g.h
app/src/main/cpp/jni/noisedetect/: noisedetect.c  noisedetect.h
app/src/main/cpp/jni/rnnoise/: denoise.h  rn_arch.h  rn_celt_lpc.c  rn_celt_lpc.h  rn_kiss_fft.c  rn_kiss_fft.h  rn_kiss_fft_guts.h  rn_pitch.c  rn_pitch.h  rnn.c  rnn.h  rnn_data.c  rnnoise.c  rnnoise.h
app/src/main/cpp/jni/speex-1.2rc1/include/speex/: speex_config_types.h  speex_echo.h
app/src/main/cpp/jni/speex-1.2rc1/libspeex/: mdf.c
app/src/main/cpp/jni/webrtc-v57/webrtc/common_audio/signal_processing/include/: spl_inl.h
app/src/main/cpp/jni/webrtc-v57/webrtc/modules/audio_processing/: echo_cancellation_impl.cc
app/src/main/cpp/jni/webrtc-v57/webrtc/modules/audio_processing/aec/: aec_core.cc  aec_core.h  echo_cancellation.cc  echo_cancellation.h
app/src/main/cpp/jni/webrtc-v57/webrtc/modules/audio_processing/aecm/: aecm_core.cc  aecm_core.h  aecm_core_c.cc  echo_control_mobile.cc  echo_control_mobile.h
app/src/main/java/sdkapp/video/lightsky/com/demostep1/: AudioPlayer.java  AvcDecoder.java  AvcEncoder.java  MainActivity.java  YKAudioPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/sdkapp/video/lightsky/com/demostep1/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
